--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -210,7 +210,7 @@
   "CREATOR/HACK_PLACE_OVER": "Ставить поверх",
   "CREATOR/HACK_PLACE_OVER/TIP": "Позволяет ставить одни и те же объекты друг поверх друга",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Плавный след в редакторе",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Делает след игрока в редакторе более плавным за счет его обновления каждый кадр, а не 30 раз в секунду",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Делает след игрока в редакторе более плавным за счёт его обновления каждый кадр, а не 30 раз в секунду",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Без ограничения строк и колонок",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Позволяет выставлять любое количество строк и колонок в списке объектов редактора",
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Обход значений триггеров",
@@ -255,10 +255,10 @@
   "LEVEL/FRAME_STEPPER/DROPDOWN/BACK/PRE": "Назад",
   "LEVEL/FRAME_STEPPER/DROPDOWN/PAUSE": "Клавиша паузы",
   "LEVEL/FRAME_STEPPER/DROPDOWN/PAUSE/PRE": "Пауза",
-  "LEVEL/FRAME_STEPPER/DROPDOWN/STEP": "Клавиша вперед",
-  "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "Вперед",
+  "LEVEL/FRAME_STEPPER/DROPDOWN/STEP": "Клавиша вперёд",
+  "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "вперёд",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER": "Покадровое перемещение",
-  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Позволяет перемещаться покадрово вперед и назад по нажатии определенных клавиш",
+  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Позволяет перемещаться покадрово вперёд и назад по нажатии определенных клавиш",
   "LEVEL/FORCE_ICE/HACK_FORCE_ICE": "Принудительный лёд",
   "LEVEL/FORCE_ICE/HACK_FORCE_ICE/TIP": "Заставляет все блоки вести себя как лёд (или наоборот, в случае, если полностью отключить)",
   "LEVEL/FORCE_ICE/DROPDOWN/DISABLE": "Отключить лёд",
@@ -387,7 +387,7 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Не ограничивать длину в редакторе",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "След хитбоксов",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает путь игрока в виде хитбоксов, требует включенный показ хитбоксов",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Старый рассчет",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Старый рассчёт",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Умные стартовые позиции",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Автоматически выставляет скорость, режим и вертикальные границы при игре",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Скрыть интерфейс",
@@ -597,7 +597,7 @@
   "STATUS/PERCENTAGE/ENABLED": "Проценты",
   "STATUS/CLOCK/ENABLED": "Часы",
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12-ти часовая система (AM/PM)",
-  "STATUS/FRAME/ENABLED": "Счетчик кадров",
+  "STATUS/FRAME/ENABLED": "Счётчик кадров",
   "STATUS/POSITION/ENABLED": "Позиция",
   "STATUS/REPLAY_STATE/ENABLED": "Состояние воспроизведения",
   "REPLAY": "Макрос",
