something doesn't fit quite enough + pay some respect in uk-UA.json

--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -61,7 +61,7 @@
   "HOME/MISC/LOGOUT": "Вийти з акаунту",
   "KEYBINDS": "Гарячі клавіші",
   "KEYBINDS/SHORTCUT": "Гаряча клавіша",
-  "KEYBINDS/SET": "Оберіть хак для створення гарячої клавіші",
+  "KEYBINDS/SET": "Оберіть хак для створення гар. клав.",
   "KEYBINDS/VIEW": "Переглянути гарячі клавіші",
   "KEYBINDS/REMOVE": "Видалити гарячі клавіші",
   "KEYBINDS/DISABLE_IN_EDITOR": "Деакт. в редакторі",
@@ -315,7 +315,7 @@
   "LEVEL/HACK_SHOW_TRIGGERS": "Показ тригерів",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Показує тригери в рівні",
   "LEVEL/HACK_SHIPCOPTER": "Кораблекоптер",
-  "LEVEL/HACK_SHIPCOPTER/TIP": "Змінює управління свінг-коптера на управління корабля, але зберігає фізику свінг-коптера",
+  "LEVEL/HACK_SHIPCOPTER/TIP": "Змінює управління свінг-коптера на управління корабля, але зберігає фізику свінг-коптера (респект Beat за фічу)",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "Зміна розміру хітбоксів",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER/TIP": "Змінює розмір хітбоксів об'єктів у певну кількість разів",
   "LEVEL/HITBOX_MULTIPLIER/DROPDOWN/HAZARDS/ENABLED": "Шипи",
