--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Missatge",
   "STATUS/TESTMODE/ENABLED": "Mode de Prova",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicador de Truc",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Comptador de FPS",
   "STATUS/CPS/ENABLED": "Comptador de CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Mostrar màx",
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar total",
   "STATUS/BEST_RUN/ENABLED": "Millor Intent",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Precisió de Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostrar prefix",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Morts de Noclip",
