--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Message",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Cheat Indicator",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "Hide when Legit",
   "STATUS/FPS/ENABLED": "FPS Counter",
   "STATUS/CPS/ENABLED": "CPS Counter",
   "STATUS/CPS/DROPDOWN/MAX": "Show max",
   "STATUS/CPS/DROPDOWN/TOTAL": "Show total",
   "STATUS/BEST_RUN/ENABLED": "Best Run",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Accurate Percentage",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Accuracy",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Show prefix",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip Deaths",
