--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mensaje",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicador de trampas",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Contador de FPS",
   "STATUS/CPS/ENABLED": "Contador de CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Mostrar máximos",
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar totales",
   "STATUS/BEST_RUN/ENABLED": "Mejor run",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Accuracy",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostrar prefijo",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Muertes en noclip",
