--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Mode Test",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicateur de Triche",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Compteur IPS",
   "STATUS/CPS/ENABLED": "Compteur CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Afficher Max",
   "STATUS/CPS/DROPDOWN/TOTAL": "Afficher Total",
   "STATUS/BEST_RUN/ENABLED": "Meilleure tentative",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Précision Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Afficher Préfix",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Morts Noclip",
