--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Üzenet",
   "STATUS/TESTMODE/ENABLED": "Tesztmód",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Csalásjelző",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "FPS mutató",
   "STATUS/CPS/ENABLED": "CPS mutató",
   "STATUS/CPS/DROPDOWN/MAX": "Legtöbb CPS",
   "STATUS/CPS/DROPDOWN/TOTAL": "Összes kattintások",
   "STATUS/BEST_RUN/ENABLED": "Legjobb run",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip pontosság",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Prefix mutatása",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip halálok",
