--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicatore Cheat",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Contatore FPS",
   "STATUS/CPS/ENABLED": "Contatore CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Mostra massimo",
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostra totali",
   "STATUS/BEST_RUN/ENABLED": "Run migliore",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Accuratezza Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostra prefisso",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Morti Noclip",
