--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "메시지",
   "STATUS/TESTMODE/ENABLED": "테스트 모드",
   "STATUS/CHEAT_INDICATOR/ENABLED": "치트 표시기",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "FPS 카운터",
   "STATUS/CPS/ENABLED": "CPS 카운터",
   "STATUS/CPS/DROPDOWN/MAX": "최대값 표시",
   "STATUS/CPS/DROPDOWN/TOTAL": "합계 표시",
   "STATUS/BEST_RUN/ENABLED": "최고 기록",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "노클립 정확도",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "접두사 표시",
   "STATUS/NOCLIP_DEATHS/ENABLED": "노클립 사망 수",
