--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Wiadomość",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Wzkaźnik Cheatów",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Licznik FPS",
   "STATUS/CPS/ENABLED": "Licznik CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Pokaż maksimum",
   "STATUS/CPS/DROPDOWN/TOTAL": "Pokaż łączne",
   "STATUS/BEST_RUN/ENABLED": "Najlepsza Próba",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Dokładność Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Pokaż prefiks",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Śmierci Noclip",
