--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mensagem",
   "STATUS/TESTMODE/ENABLED": "",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicador de Cheats",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Mostrar FPS",
   "STATUS/CPS/ENABLED": "Mostrar CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Mostrar máximo",
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar total",
   "STATUS/BEST_RUN/ENABLED": "Melhor Tentativa",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Precisão do Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Mortes em Noclip",
