--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Сообщение",
   "STATUS/TESTMODE/ENABLED": "Тестовый режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Индикатор читов",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Счётчик кадров в секунду",
   "STATUS/CPS/ENABLED": "Счётчик кликов в секунду",
   "STATUS/CPS/DROPDOWN/MAX": "Показать максимальное количество кликов в секунду",
   "STATUS/CPS/DROPDOWN/TOTAL": "Общее количество кликов",
   "STATUS/BEST_RUN/ENABLED": "Лучший прогресс",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Точность",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Показывать префикс",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Смерти",
