--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mesaj",
   "STATUS/TESTMODE/ENABLED": "Test Modu",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Hile Göstergesi",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "FPS Sayacı",
   "STATUS/CPS/ENABLED": "CPS Sayacı",
   "STATUS/CPS/DROPDOWN/MAX": "Maksimumu göster",
   "STATUS/CPS/DROPDOWN/TOTAL": "Toplamı göster",
   "STATUS/BEST_RUN/ENABLED": "En İyi Deneme",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Doğruluğu",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Ön Eki göster",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip Ölümleri",
