--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Повідомлення",
   "STATUS/TESTMODE/ENABLED": "Тестовий режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Індикатор читів",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Лічильник FPS",
   "STATUS/CPS/ENABLED": "Лічильник CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Показ максимуму",
   "STATUS/CPS/DROPDOWN/TOTAL": "Показ загального значення",
   "STATUS/BEST_RUN/ENABLED": "Найкраща спроба",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Точність ноукліпу",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Показ префіксу",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Смерті в ноукліпі",
