--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "",
   "STATUS/CHEAT_INDICATOR/ENABLED": "",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "FPS",
   "STATUS/CPS/ENABLED": "CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Hiện tối đa",
   "STATUS/CPS/DROPDOWN/TOTAL": "Hiện tổng",
   "STATUS/BEST_RUN/ENABLED": "",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Độ chính xác Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Số lần chết trong Noclip",
