--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "作弊指示器",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "显示FPS",
   "STATUS/CPS/ENABLED": "显示CPS",
   "STATUS/CPS/DROPDOWN/MAX": "显示最大CPS",
   "STATUS/CPS/DROPDOWN/TOTAL": "显示CPS总数",
   "STATUS/BEST_RUN/ENABLED": "最佳进度",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip accuracy",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "显示前缀",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip死亡次数",
