--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "作弊指示器",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "顯示FPS",
   "STATUS/CPS/ENABLED": "顯示CPS",
   "STATUS/CPS/DROPDOWN/MAX": "顯示最高CPS",
   "STATUS/CPS/DROPDOWN/TOTAL": "顯示CPS總數",
   "STATUS/BEST_RUN/ENABLED": "最佳進度",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Noclip準確性",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip死亡次數",
