--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Nachricht",
   "STATUS/TESTMODE/ENABLED": "",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Cheat-Indikator",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "FPS Zähler",
   "STATUS/CPS/ENABLED": "CPS Zähler",
   "STATUS/CPS/DROPDOWN/MAX": "",
   "STATUS/CPS/DROPDOWN/TOTAL": "",
   "STATUS/BEST_RUN/ENABLED": "Bester Run",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip-Genauigkeit",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip-Tode",
