--- a/langs/es-CO.json
+++ b/langs/es-CO.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Modo de Prueba",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicador de Trampas",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "Contador de FPS",
   "STATUS/CPS/ENABLED": "Contador de CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Mostrar máximo",
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar total",
   "STATUS/BEST_RUN/ENABLED": "Mejor Carrera",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Precisión de Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostrar prefijo",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Muertes de Noclip",
