--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -592,11 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mezua",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Tranpa-Adierazlea",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
   "STATUS/FPS/ENABLED": "FPS Kontadorea",
   "STATUS/CPS/ENABLED": "CPS Kontadorea",
   "STATUS/CPS/DROPDOWN/MAX": "Gehiengoa Erakutsi",
   "STATUS/CPS/DROPDOWN/TOTAL": "Guztira Erakutsi",
   "STATUS/BEST_RUN/ENABLED": "Run Onena",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Zehaztasuna",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Aurrizkia Erakutsi",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip Hiltzeak",
