--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -16,7 +16,7 @@
   "ERROR/HACKPRO/CONFLICTING_RULESET": "Набор выбранных правил конфликтует со включенными ограничениями правил",
   "ERROR/REPLAY/EMPTY_FILENAME": "Пожалуйста, введите название файла...",
   "ERROR/REPLAY/FILE_NOT_FOUND": "Файл не найден",
-  "ERROR/REPLAY/NO_INPUTS": "Нынешний макрос не имеет действий, нет возможности продолжить",
+  "ERROR/REPLAY/NO_INPUTS": "Нынешний макрос не имеет действий, невозможно продолжить",
   "ERROR/STATUS/MAX_FIELDS": "Больше нет доступных полей статуса, вы можете увидеть их в секции форматирования полей",
   "ERROR/LEVEL/NO_CBF": "Пожалуйста, установите Click Between Frames от Syzzi в Geode",
   "MESSAGE": "Сообщение",
@@ -88,7 +88,7 @@
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Точные проценты",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Позволяет настраивать точность процентов",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Точные проценты",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 знака после запятой",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 знак после запятой",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 знака после запятой",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 знака после запятой",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 знака после запятой",
@@ -288,7 +288,7 @@
   "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Требует подтверждение, прежде чем зайти в обычный режим",
   "LEVEL/HACK_CONFIRM_PRACTICE": "Подтверждение практики",
   "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Требует подтверждение, прежде чем зайти в практику",
-  "LEVEL/HACK_CONFIRM_RESET": "Подтвержденин перезапуска",
+  "LEVEL/HACK_CONFIRM_RESET": "Подтверждение перезапуска",
   "LEVEL/HACK_CONFIRM_RESET/TIP": "Требует подтверждение, прежде чем перезапустить уровень",
   "LEVEL/HACK_FORCE_PLATFORMER": "Платформер везде",
   "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Включает режим платформера во всех уровнях",
@@ -399,7 +399,7 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L/PRE": "Влево",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R": "Горячая клавиша вправо",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R/PRE": "Вправо",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/ALLOW_RATED": "Разрешить в оцененных уровнях",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/ALLOW_RATED": "Разрешить в оценённых уровнях",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/DISABLE_IN_PRACTICE": "Отключить в режиме практики",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE": "Размер интерфейса",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Размер интерфейса",
@@ -419,7 +419,7 @@
   "UNIVERSAL/HACK_FAST_CHESTS": "Быстрые сундуки",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Ускоряет анимацию открытия сундуков",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Грузить музыку в память",
-  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "Загружает музыку в оперативную память вместо того, чтобы играть ее с SSD/HDD, может увеличить производитильность благодаря более быстрым загрузкам уровней",
+  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "Загружает музыку в оперативную память вместо того, чтобы играть ее с SSD/HDD, может увеличить производительность благодаря более быстрым загрузкам уровней",
   "UNIVERSAL/HACK_LOCK_CURSOR": "Заблокировать курсор",
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Блокирует курсор внутри окна игры во время редактирования или игры в уровень",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Игра в главном меню",
@@ -431,7 +431,7 @@
   "UNIVERSAL/HACK_SAFE_MODE": "Безопасный режим",
   "UNIVERSAL/HACK_SAFE_MODE/TIP": "Отключает прогресс, верификацию и прохождение уровней",
   "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Окно безопасного режима",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Показывает предупреждающее окно при входе в в уровень в случае, если включены читы",
+  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Показывает предупреждающее окно при входе в уровень в случае, если включены читы",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Прозрачные списки",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Удаляет фон у списков при их просмотре",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Октавы",
