--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -388,10 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "След хитбоксов",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает путь игрока в виде хитбоксов, требует включенный показ хитбоксов",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Старый рассчёт",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Порталы режимов",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Порталы скорости",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "Порталы размера",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "Порталы отражения",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Умные стартовые позиции",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Автоматически выставляет скорость, режим и вертикальные границы при игре",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Скрыть интерфейс",
@@ -483,11 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Длительность (с)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Длительность",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "с",
-  "INTERFACE": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
-  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
-  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE": "Интерфейс",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "Скрыть читы при прохождении",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Скрыть экстра",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "Скрыть снег в меню",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Скрыть Iconic",
   "SPEEDHACK": "Спидхак",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Включить",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Глобально меняет скорость всей игры на выставленный множитель",
@@ -592,13 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Сообщение",
   "STATUS/TESTMODE/ENABLED": "Тестовый режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Индикатор читов",
-  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "Скрыть, если нет читов",
   "STATUS/FPS/ENABLED": "Счётчик кадров в секунду",
   "STATUS/CPS/ENABLED": "Счётчик кликов в секунду",
   "STATUS/CPS/DROPDOWN/MAX": "Показать максимальное количество кликов в секунду",
   "STATUS/CPS/DROPDOWN/TOTAL": "Общее количество кликов",
   "STATUS/BEST_RUN/ENABLED": "Лучший прогресс",
-  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Точные проценты", 
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Точность",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Показывать префикс",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Смерти",
