--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -308,13 +308,13 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Halál után megmutatja a hitboxokat",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Mutatás Noclippel is",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Csak a halál objektum mutatása",
-  "LEVEL/HACK_SHOW_LAYOUT": "Layout",
+  "LEVEL/HACK_SHOW_LAYOUT": "Layout mutatása",
   "LEVEL/HACK_SHOW_LAYOUT/TIP": "Kiszedi az összes dekorációt a pályából, csak a pálya vázát mutatja",
   "LEVEL/HACK_SHOW_TRAJECTORY": "Mozgáspálya mutatása",
   "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Megmutatja hova fog a karaktered menni",
   "LEVEL/HACK_SHOW_TRIGGERS": "Triggerek",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Megmutatja a triggereket a pályában, játék közben",
-  "LEVEL/HACK_SHIPCOPTER": "Swingcopter",
+  "LEVEL/HACK_SHIPCOPTER": "A shipcopter",
   "LEVEL/HACK_SHIPCOPTER/TIP": "Ezzel bekapcsolhatod a shipcoptert. Olyan lesz a ship, mint a swing.",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "Hitbox szorzó",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER/TIP": "Nagyobbítja/kisebbíti a hitboxokat",
