--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -388,10 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "히트박스 트레일 표시",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "시도 중 플레이어의 히트박스가 어디로 갔는지 트레일을 표시합니다, 히트박스 표시가 필요합니다.",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "레거시 계산",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "게임모드 포탈",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "스피드 포탈",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "크기 포탈",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "거울 포탈",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "스타트포스 개선",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "스타트포스의 게임 모드, 속도, 크기와 테두리를 자동으로 설정합니다.",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "인터페이스 숨기기",
@@ -483,18 +483,18 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "지속 시간 (초)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "지속 시간",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "초",
-  "INTERFACE": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
-  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
-  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE": "인터페이스",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "엔드스크린 치트 숨기기",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "엔드스크린 추가 기능 숨기기",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "메뉴 눈 숨기기",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "일시 정지 시 아이콘 숨기기",
   "SPEEDHACK": "스피드핵",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "활성화됨",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "설정된 배수로 게임 전체 속도를 느리게 합니다.",
   "SPEEDHACK/LAYOUT/SPINNER": "속도",
   "SPEEDHACK/LAYOUT/SPINNER/PRE": "속도",
   "SPEEDHACK/LAYOUT/SPINNER/SUF": "배",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "스피드핵 오디오",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "오디오 스피드핵",
   "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "오디오 속도를 스피드핵과 일치시킵니다.",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "클래식 모드",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "Cheat Engine의 speedhack과 유사하게 시스템 시계를 늦춰 게임 속도를 늦춥니다.",
@@ -592,13 +592,13 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "메시지",
   "STATUS/TESTMODE/ENABLED": "테스트 모드",
   "STATUS/CHEAT_INDICATOR/ENABLED": "치트 표시기",
-  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "치트 미사용 중일 때 숨기기",
   "STATUS/FPS/ENABLED": "FPS 카운터",
   "STATUS/CPS/ENABLED": "CPS 카운터",
   "STATUS/CPS/DROPDOWN/MAX": "최대값 표시",
   "STATUS/CPS/DROPDOWN/TOTAL": "합계 표시",
   "STATUS/BEST_RUN/ENABLED": "최고 기록",
-  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "정확한 퍼센트",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "노클립 정확도",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "접두사 표시",
   "STATUS/NOCLIP_DEATHS/ENABLED": "노클립 사망 수",
